# gradient-augmented-levelset-cuda

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  analytical-fields_2levelset_8cc.html  analytical-fields_2levelset_8cc_source.html  analytical-fields_2levelset_8h.html  analytical-fields_2levelset_8h.js  analytical-fields_2levelset_8h_source.html  analytical-fields_2velocity_8cc.html  analytical-fields_2velocity_8cc_source.html  analytical-fields_2velocity_8h.html  analytical-fields_2velocity_8h.js  analytical-fields_2velocity_8h_source.html  annotated.html  annotated_dup.js  appveyor.yml  array_8cc.html  array_8cc_source.html  array_8h.html  array_8h_source.html  classGALS_1_1ANALYTICAL__FIELDS_1_1Levelset.html  classGALS_1_1ANALYTICAL__FIELDS_1_1Levelset.js  classGALS_1_1ANALYTICAL__FIELDS_1_1Velocity.html  classGALS_1_1ANALYTICAL__FIELDS_1_1Velocity.js  classGALS_1_1CPU_1_1Array.html  classGALS_1_1CPU_1_1Array.js  classGALS_1_1CPU_1_1Gradient.html  classGALS_1_1CPU_1_1Gradient.js  classGALS_1_1CPU_1_1Grid.html  classGALS_1_1CPU_1_1Grid.js  classGALS_1_1CPU_1_1Interpolate.html  classGALS_1_1CPU_1_1Interpolate.js  classGALS_1_1CPU_1_1Levelset.html  classGALS_1_1CPU_1_1Levelset.js  classGALS_1_1CPU_1_1LevelsetVelocity.html  (+269 more)
applications/: CMakeLists.txt
applications/advection/: main.cc
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/src/: index-sort-f.html  index-sort-l.html  index.html  main.cc.func-sort-c.html  main.cc.func.html  main.cc.gcov.html
coverage/src/cpu/: array.cc.func-sort-c.html  array.cc.func.html  array.cc.gcov.html  file-utils.cc.func-sort-c.html  file-utils.cc.func.html  file-utils.cc.gcov.html  gradient.cc.func-sort-c.html  gradient.cc.func.html  gradient.cc.gcov.html  grid.cc.func-sort-c.html  grid.cc.func.html  grid.cc.gcov.html  index-sort-f.html  index-sort-l.html  index.html  input-parser.cc.func-sort-c.html  input-parser.cc.func.html  input-parser.cc.gcov.html  interpolate.cc.func-sort-c.html  interpolate.cc.func.html  interpolate.cc.gcov.html  levelset-velocity.cc.func-sort-c.html  levelset-velocity.cc.func.html  levelset-velocity.cc.gcov.html  levelset.cc.func-sort-c.html  levelset.cc.func.html  levelset.cc.gcov.html  mat3.cc.func-sort-c.html  mat3.cc.func.html  mat3.cc.gcov.html  temporal.cc.func-sort-c.html  temporal.cc.func.html  temporal.cc.gcov.html  vec3.cc.func-sort-c.html  vec3.cc.func.html  vec3.cc.gcov.html  vec_n.cc.func-sort-c.html  vec_n.cc.func.html  vec_n.cc.gcov.html
coverage/src/cpu/analytical-fields/: index-sort-f.html  index-sort-l.html  index.html  levelset.cc.func-sort-c.html  levelset.cc.func.html  levelset.cc.gcov.html  velocity.cc.func-sort-c.html  velocity.cc.func.html  velocity.cc.gcov.html
coverage/src/cpu/gradient/: index-sort-f.html  index-sort-l.html  index.html  third-order.cc.func.html  (+5 more)
doc/: CMakeLists.txt  Doxyfile  doc.conf  doxygen.mk
doc/pages/: README.md
docs/: CMakeLists.txt  Doxyfile  conf.py  doxygen.mk  index.rst
docs/pages/: README.md
ext/: CMakeLists.txt
include/gals/: input-parser.h
include/gals/analytical-fields/: levelset.h  velocity.h
include/gals/cpu/: gradient.h  interpolate.h  levelset-velocity.h  levelset.h  temporal.h
include/gals/input-fields/: general.h  grid.h  input-fields.h  levelset.h  time.h  velocity.h
include/gals/input-parser/: general.h  grid.h  input-parser-base.h  levelset.h  time.h  velocity.h
include/gals/utilities/: array.h  file-utils.h  grid.h  mat3.h  utilities.h  vec3.h  vec_n.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enumvalues_0.js  (+56 more)
src/: main.cc
src/cpu/: README.md  array.cc  array.h  file-utils.cc  gradient.cc  gradient.h  grid.cc  grid.h  input-parser.cc  input-parser.h  interpolate.cc  interpolate.h  levelset-velocity.cc  levelset.cc  main.cc  mat3.cc  mat3.h  temporal.cc  utilities.h  vec3.cc  vec3.h  vec_n.cc  vec_n.h
src/cpu/analytical-fields/: levelset.cc  velocity.cc
src/cpu/gradient/: second-order-central.cc  second-order-central.h  third-order.cc  third-order.h
src/cpu/input-fields/: input-fields.cc
src/cpu/input-parser/: general.cc  grid-parser.cc  grid-parser.h  grid.cc  input-parser-base.cc  input-parser-base.h  levelset.cc  time.cc  velocity.cc
src/cpu/interpolation/: hermite-1d.cc  hermite-2d.cc  hermite-3d.cc  hermite.cc  hermite.h  linear-1d.cc  linear-2d.cc  linear-3d.cc  linear.cc  linear.h
src/cpu/temporal-schemes/: euler.cc
src/include/gals/: input-parser.h
src/reference/: AdvectionPointCalcs.h  Constants.h  GALS_Advection_MPI.cpp  GALS_Advection_MPI_OpenMP.cpp  GALS_Advection_OpenMP.cpp  Makefile  README.md  Readfiles.m  TimeSteppingMethods.h  defineMPI.h  ofrun
src/reference/CUDA/: AdvectionPointCalcsCUDA.cu  Allocation.h  GALS_Advection.cu  HermiteCUDA.cu  InitializeLevelSet.h  Makefile  TimeSteppingMethodsCUDA.cu  VortexVelocityCUDA.cu
src/reference/OldSerialCode/: GALS_Advection.cpp  Hermite.h  Initializer_vortex.h  Makefile  batch
src/reference/SerialCode/: Allocation.h  GALS_Advection.cpp  Hermite.h  InitializeLevelSet.h  Setting.h  VariableDefinitions.h  VortexVelocity.h
test/: CMakeLists.txt  array.cc  gradient.cc  grid.cc  input-parser.cc  interpolation.cc  mat3.cc  vec3.cc  vec_n.cc
test_fs/: has_filesystem.cc
tests/: CMakeLists.txt  analytical-fields-levelset.cc  analytical-fields-velocity.cc  array.cc  euler.cc  file-utils.cc  filesystem.cc  gradient.cc  grid.cc  hermite-interpolation.cc  input-parser.cc  inputs  interpolation.cc  levelset-velocity.cc  levelset.cc  linear-interpolation.cc  mat3.cc  semi-lagrangian-euler.cc  utilities.cc  vec3.cc  vec_n.cc
tools/octave/: Visualize.m
(+78 files in other folders)
