FILE(GLOB FILES "*.cpp" "*.cc")

SET(APP_NAME app)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/advection ADVECTION_SRC)
ADD_EXECUTABLE(${APP_NAME} ${ADVECTION_SRC})

SET_PROPERTY(TARGET ${APP_NAME} PROPERTY CXX_STANDARD 14)

TARGET_INCLUDE_DIRECTORIES(${APP_NAME}
  PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/advection
  ${PROJECT_SOURCE_DIR}/src
  ${PROJECT_SOURCE_DIR}/include
)

TARGET_LINK_LIBRARIES(${APP_NAME}
  PUBLIC
    gals_cpu
    yaml-cpp
    spdlog
    filesystem
)

SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES FOLDER "Applications")

ADD_TEST(NAME ${APP_NAME} COMMAND ${APP_NAME})
