FIND_PACKAGE(Doxygen REQUIRED)

SET(DOCS_CONFIG "${CMAKE_CURRENT_SOURCE_DIR}/doxygen.mk")
SET(DOCS_CONFIG_OUT "${CMAKE_CURRENT_BINARY_DIR}/doxygen.mk.out")

SET(DOCS_LAYOUT "${CMAKE_CURRENT_SOURCE_DIR}/layout.xml")
SET(DOCS_LAYOUT_OUT "${CMAKE_CURRENT_BINARY_DIR}/layout.xml.out")

SET(DOCS_DIR     "${CMAKE_CURRENT_SOURCE_DIR}")
SET(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
SET(SRC_DIR "${PROJECT_SOURCE_DIR}/src")
#set(EXAMPLES_DIR "${PROJECT_SOURCE_DIR}/examples")
SET(SNIPPETS_DIR "${PROJECT_SOURCE_DIR}/tests")

CONFIGURE_FILE(${DOCS_CONFIG} ${DOCS_CONFIG_OUT})
CONFIGURE_FILE(${DOCS_LAYOUT} ${DOCS_LAYOUT_OUT})

ADD_CUSTOM_TARGET(doc
  ALL
  COMMAND ${DOXYGEN_EXECUTABLE} ${DOCS_CONFIG_OUT}
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  COMMENT "Generating Documentation"
  VERBATIM)

INSTALL(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html
  DESTINATION docs
  COMPONENT documentation
  PATTERN "*"
  PATTERN ".git" EXCLUDE
  PATTERN "CMakeFiles" EXCLUDE
  PATTERN "man" EXCLUDE
  )
